# PoseSnapAR

./: package-lock.json  package.json
backend/: binding.gyp  cadexchanger.cc  package-lock.json  (+3 more)
backend/cadexchanger/cadexsdk/examples/csharp/: CMakeLists.txt  cadex_csharp_examples.sln
backend/cadexchanger/cadexsdk/examples/csharp/Unity/: README.md  copy_dlls.bat
backend/cadexchanger/cadexsdk/examples/csharp/Unity/ProjectSettings/: GraphicsSettings.asset
backend/cadexchanger/cadexsdk/examples/csharp/advgeom/: CMakeLists.txt
backend/cadexchanger/cadexsdk/examples/csharp/advgeom/brepsimplify/: Program.cs  brepsimplify.csproj
backend/cadexchanger/cadexsdk/examples/csharp/advgeom/meshsimplify/: CMakeLists.txt
backend/cadexchanger/cadexsdk/examples/csharp/conversion/: CMakeLists.txt
backend/cadexchanger/cadexsdk/examples/csharp/conversion/cdxfbconverter/: CMakeLists.txt  Program.cs
backend/cadexchanger/cadexsdk/examples/csharp/conversion/export/: CMakeLists.txt
backend/cadexchanger/cadexsdk/examples/csharp/conversion/import/: import.csproj
backend/cadexchanger/cadexsdk/examples/csharp/conversion/transfer/: CMakeLists.txt
backend/cadexchanger/cadexsdk/examples/csharp/conversion/transferparams/: Program.cs  transferparams.csproj
backend/cadexchanger/cadexsdk/examples/csharp/meshing/: CMakeLists.txt
backend/cadexchanger/cadexsdk/examples/csharp/visualization/: CMakeLists.txt
backend/cadexsdk_3.17.0_build16601_mac_full/examples/csharp/exploring/: CMakeLists.txt
backend/cadexsdk_3.17.0_build16601_mac_full/examples/csharp/exploring/appearance/: CMakeLists.txt  appearance.csproj
backend/cadexsdk_3.17.0_build16601_mac_full/examples/csharp/exploring/bom/: bom.csproj
backend/cadexsdk_3.17.0_build16601_mac_full/examples/csharp/exploring/brepgeometry/: CMakeLists.txt  Program.cs  curve_explorer.cs  shape_explorer.cs  surface_explorer.cs
backend/cadexsdk_3.17.0_build16601_mac_full/examples/csharp/exploring/breprepresentation/: CMakeLists.txt  Program.cs  breprepresentation.csproj
backend/cadexsdk_3.17.0_build16601_mac_full/examples/csharp/exploring/configurations/: Program.cs
backend/cadexsdk_3.17.0_build16601_mac_full/examples/csharp/exploring/layers/: Program.cs
backend/cadexsdk_3.17.0_build16601_mac_full/examples/csharp/exploring/pmi/: Program.cs
backend/cadexsdk_3.17.0_build16601_mac_full/examples/csharp/exploring/polyrepresentation/: Program.cs
backend/cadexsdk_3.17.0_build16601_mac_full/examples/csharp/exploring/propertytable/: Program.cs  propertytable.csproj
backend/cadexsdk_3.17.0_build16601_mac_full/examples/csharp/exploring/transformations/: Program.cs  transformations.csproj
backend/cadexsdk_3.17.0_build16601_mac_full/examples/csharp/exploring/validationproperties/: CMakeLists.txt
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/: CMakeLists.txt
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/Unigine/: Unigine.project  copy_libraries.bat
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/Unigine/source/: AppEditorLogic.cpp  AppEditorLogic.h  AppSystemLogic.cpp  AppSystemLogic.h  AppWorldLogic.cpp  AppWorldLogic.h  CMakeLists.txt  ModelImporter.h
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/advgeom/brepsimplify/: CMakeLists.txt
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/conversion/cdxfbconverter/: CMakeLists.txt  main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/conversion/export/: CMakeLists.txt  main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/conversion/import/: CMakeLists.txt
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/conversion/transfer/: main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/conversion/transferparams/: main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/exploring/appearance/: main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/exploring/bom/: main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/exploring/brepgeometry/: CMakeLists.txt  base_explorer.hxx  main.cxx  pcurve_explorer.hxx  surface_explorer.hxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/exploring/breprepresentation/: main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/exploring/layers/: CMakeLists.txt  main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/exploring/pmi/: CMakeLists.txt  main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/exploring/propertytable/: CMakeLists.txt
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/exploring/validationproperties/: CMakeLists.txt  main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/meshing/: CMakeLists.txt
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/meshing/lods/: CMakeLists.txt
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/meshing/mefisto/: main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/misc/: CMakeLists.txt
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/misc/logging/: CMakeLists.txt
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/misc/occbrep/: CMakeLists.txt  main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/misc/occimpexp/: CMakeLists.txt
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/misc/occxde/: main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/misc/progressindicatorgui/: importdialog.hxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/modeling/: CMakeLists.txt
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/modeling/assembly/: main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/modeling/brep/: main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/modeling/brepfeatures/: CMakeLists.txt  main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/modeling/brepprimitives/: main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/modeling/metadata/: main.cxx
backend/cadexsdk_3.17.0_build16601_mac_full/examples/cxx/visualization/offscreen/: CMakeLists.txt  main.cxx
(+994 files in other folders)
