add_subdirectory("appearance")
add_subdirectory("bom")
add_subdirectory("breprepresentation")
add_subdirectory("configurations")
add_subdirectory("layers")
add_subdirectory("polyrepresentation")
add_subdirectory("propertytable")
add_subdirectory("transformations")
add_subdirectory("validationproperties")
add_subdirectory("pmi")